--- a/src/style.css
+++ b/src/style.css
@@ -49,15 +49,27 @@ textarea.content-input {
     height: 45px;
 }
 
-div.post-component {
+div {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
+    background-color: rgb(61, 160, 160);
+}
+
+div.post-component {
     height: 25%;
     margin: 30px;
     padding: 15px;
     border: 2px solid rgb(121, 187, 209);
     border-radius: 6px;
-    background-color: rgb(61, 160, 160);
     box-shadow: 0px 5px 20px rgb(129, 200, 224);
+}
+
+post {
+    align-self: flex-end;
+    
+}
+
+post.depth-1 {
+    width: 80%
 }
