--- a/src/style.css
+++ b/src/style.css
@@ -3,18 +3,28 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif ;
 }
 
+h1, h2, h3 {
+    color: rgb(23, 70, 70);
+}
+
 h1 {
     display: flex;
     justify-content: center;
     align-self: center;
-    color: rgb(23, 70, 70);
     font-size: 4rem;
 }
 
 h2 {
     padding: 0px 45px;
-    color: rgb(23, 70, 70);
     font-size: 2.5rem;
+}
+
+h3 {
+    padding: 10px 50px;
+}
+
+p {
+    padding: 10px 50px;
 }
 
 button {
@@ -56,20 +66,31 @@ div {
     background-color: rgb(61, 160, 160);
 }
 
-div.post-component {
-    height: 25%;
-    margin: 30px;
-    padding: 15px;
+div.add-post, div.post-container {
     border: 2px solid rgb(121, 187, 209);
     border-radius: 6px;
     box-shadow: 0px 5px 20px rgb(129, 200, 224);
 }
 
-post {
+div.add-post {
+    height: 25%;
+    margin: 30px;
+    padding: 15px;
+}
+
+div.post-container {
     align-self: flex-end;
     
 }
 
-post.depth-1 {
+div.depth-1 {
+    width: 100%
+}
+
+div.depth-2 {
+    width: 90%
+}
+
+div.depth-3 {
     width: 80%
 }
