--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-self: center;
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
 
 h2 {
@@ -20,24 +20,36 @@ h2 {
 }
 
 h3 {
-    padding: 10px 50px;
+    padding: 2px 50px;
+    margin-bottom: 0px;
 }
 
 p {
-    padding: 10px 50px;
+    padding: 0 50px;
+    margin-bottom: 5px;
 }
 
 button {
+    display: flex;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(17, 191, 197);
+}
+
+button.submit-button {
+    align-self: center;
     margin-top: 10px;
     margin-bottom: 30px;
     padding: 10px;
     width: 100px;
     height: 40px;
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(17, 191, 197);
+}
+
+button.reply-button {
+    align-self: flex-start;
+    margin: 10px 50px;
+    width: 50px;
+    height: 25px;
 }
 
 textarea {
@@ -66,31 +78,31 @@ div {
     background-color: rgb(61, 160, 160);
 }
 
-div.add-post, div.post-container {
+div.add-post {
     border: 2px solid rgb(121, 187, 209);
     border-radius: 6px;
-    box-shadow: 0px 5px 20px rgb(129, 200, 224);
+    box-shadow: 0px 1px 15px rgb(129, 200, 224);
 }
 
 div.add-post {
+    width: 80%;
     height: 25%;
-    margin: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
     padding: 15px;
 }
 
-div.post-container {
+div.post {
     align-self: flex-end;
-    
+    margin-left: auto;
+    margin-right: auto;
+    height: 20%;
+    width: 70%;
 }
 
 div.depth-1 {
-    width: 100%
-}
-
-div.depth-2 {
-    width: 90%
-}
-
-div.depth-3 {
-    width: 80%
+    border-bottom-style: solid;
+    border-bottom-color: rgb(129, 200, 224);
+    padding: 20px 0px;
 }
