--- a/src/style.css
+++ b/src/style.css
@@ -44,16 +44,16 @@ p.dislike-count {
 }
 
 button.reply-button, button.submit-button {
-    display: flex;
+    display: inline-block;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(17, 191, 197);
 }
 
 button.submit-button {
     align-self: center;
+    text-align: center;
     margin-top: 10px;
     margin-bottom: 30px;
-    padding: 10px;
     width: 100px;
     height: 40px;
 }
